--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - cd elixir && make && cd ..
 before_script:
   - export PATH=`pwd`/elixir/bin:$PATH
+  - mix hex.local --force
   - mix deps.get
 script:
   - mix test
