Fix half_up and half_down rounding
They should round the same regardless of sign.
Closes #13.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: erlang
 otp_release:
   - 17.0
+sudo: false
 before_install:
   - wget http://s3.hex.pm/builds/elixir/master.zip
   - unzip -d elixir master.zip
