--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,10 @@ jobs:
             otp: 20.3.8.26
           - elixir: 1.9.4
             otp: 20.3.8.26
+          - elixir: 1.10.4
+            otp: 21.3.8.16
+          - elixir: 1.10.4
+            otp: 23.0.3
     steps:
       - uses: actions/checkout@v2.3.1
       - uses: actions/setup-elixir@v1.3.0
