--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,36 +7,41 @@ on:
       - master
 
 jobs:
-  mix_test:
-    name: mix test (Erlang/OTP ${{matrix.otp}} | Elixir ${{matrix.elixir}})
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-16.04
+    env:
+      MIX_ENV: test
     strategy:
       fail-fast: false
       matrix:
         include:
-          - elixir: 1.2.6
-            otp: 18.3.4.11
-          - elixir: 1.10.4
-            otp: 23.0.3
+          - pair:
+              elixir: 1.2.6
+              otp: 18.3.4.11
+          - pair:
+              elixir: 1.11.3
+              otp: 23.2.5
+            lint: lint
     steps:
-      - uses: actions/checkout@v2.3.1
-      - uses: actions/setup-elixir@v1.3.0
-        with:
-          otp-version: ${{matrix.otp}}
-          elixir-version: ${{matrix.elixir}}
-      - name: Install Dependencies
-        run: |
-          mix local.hex --force
-          mix deps.get --only test
-      - run: mix test
+      - uses: actions/checkout@v2
 
-  check_formatted:
-    name: Check formatted
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.3.1
-      - uses: actions/setup-elixir@v1.3.0
+      - uses: erlef/setup-elixir@v1
         with:
-          otp-version: 23.0.3
-          elixir-version: 1.10.4
+          otp-version: ${{matrix.pair.otp}}
+          elixir-version: ${{matrix.pair.elixir}}
+
+      - name: Install Dependencies
+        run: mix deps.get --only test
+
       - run: mix format --check-formatted
+        if: ${{ matrix.lint }}
+
+      - run: mix deps.get && mix deps.unlock --check-unused
+        if: ${{ matrix.lint }}
+
+      - run: mix deps.compile
+
+      - run: mix compile --warnings-as-errors
+        if: ${{ matrix.lint }}
+
+      - run: mix test
