--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     env:
       MIX_ENV: test
     strategy:
@@ -16,8 +16,8 @@ jobs:
       matrix:
         include:
           - pair:
-              elixir: 1.2.6
-              otp: 18.3.4.11
+              elixir: 1.8.2
+              otp: 20.3.x
           - pair:
               elixir: 1.11.4
               otp: 23.3.x
